proxy/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  labels:
    app: db
    app.kubernetes.io/part-of: proxy
    app.openshift.io/runtime: postgresql
    app.openshift.io/runtime-version: '16'
    app.kubernetes.io/name: db
spec:
  selector:
    matchLabels:
      app: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: registry.redhat.io/rhel9/postgresql-16:9.7-1763382398
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
          - containerPort: 5432
            name: theport
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/pgsql/data
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db
