proxy/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-web
  labels:
    app: proxy-web
spec:
  ports:
    - name: port8080
      port: 8080
      targetPort: port8080
      protocol: TCP
    - name: port8081
      port: 8081
      targetPort: port8081
      protocol: TCP
  selector:
    app: proxy-web
  type: ClusterIP
