proxy/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: db
spec:
  ports:
    - name: port5432
      port: 5432
      targetPort: 5432
  selector:
    app: db
  type: ClusterIP
